--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,5 +15,5 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This Should Change on Rebase!" />
+        android:text="This Shouldn't  Change on Rebase!" />
 </RelativeLayout>
