--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -100,28 +100,16 @@
         android:layout_alignParentStart="true"
         android:checked="false"
         android:hint="you must agree to the terms and conditions of this app before playing" />
-    <EditText
-        android:id="@+id/editText3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="@string/googleacct_text"
-        android:layout_above="@+id/editText4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
-    <EditText
-        android:id="@+id/editText4"
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/facebkacct_text"
+        android:text="Help"
+        android:id="@+id/buttonHelpWelcome"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="41dp" />
-
+        android:layout_marginBottom="34dp" />
 
 
 </RelativeLayout>
