--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,24 +11,17 @@
     tools:context="com.gcideas.collaborationcomic_3.LoginActivity">
 
     <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
-
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="308dp">
 
         <LinearLayout
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="top">
 
             <AutoCompleteTextView
                 android:id="@+id/email"
@@ -49,7 +42,8 @@
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:text="Password" />
 
             <Button
                 android:id="@+id/email_sign_in_button"
@@ -60,6 +54,24 @@
                 android:text="@string/action_sign_in"
                 android:textStyle="bold" />
 
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Accept Terms&amp; Conditions"
+                android:id="@+id/registerCheckBox"
+                android:layout_gravity="center_horizontal"
+                android:checked="false"
+                android:paddingTop="18dp"
+                android:paddingBottom="18dp" />
+
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View the Terms and Conditions"
+        android:id="@+id/buttonViewTermsCond"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
